<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity_Main"
    android:background="@drawable/background">
    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:background="@drawable/logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.214"
        android:contentDescription="@string/Activity_Main_IV_Msg" />
    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_Username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:padding="5dp"
        app:layout_constraintTop_toBottomOf="@+id/iv_logo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/til_Pwd"
        android:background="@drawable/rounded_border_green"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite"
        android:theme="@style/TextInputLayoutTheme">
    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:id="@+id/et_username"
        android:hint="@string/Activity_Main_ET_Username"
        android:textColorHint="@color/colorWhite"
        android:textColor="@color/colorWhite"
        android:inputType="textPersonName"
        android:paddingLeft="10dp"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_Pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:padding="5dp"
        app:layout_constraintTop_toBottomOf="@+id/til_Username"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/btn_login"
        android:background="@drawable/rounded_border_green"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite"
        android:theme="@style/TextInputLayoutTheme">
    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:hint="@string/Activity_Main_ET_Password"
        android:textColorHint="@color/colorWhite"
        android:textColor="@color/colorWhite"
        android:inputType="numberPassword"
        android:maxLength="4"
        android:paddingLeft="10dp"
        android:id="@+id/et_pwd"/>
    </android.support.design.widget.TextInputLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/rounded_border_blue"
        android:id="@+id/btn_login"
        android:layout_margin="30dp"
        app:layout_constraintTop_toBottomOf="@+id/til_Pwd"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/Activity_Main_BTN_Login"
        android:textColor="@color/colorWhite"/>
</android.support.constraint.ConstraintLayout>